test/invalid/baseline/any-keyword.txt
Syntax error at line 1 in any-keyword.webidl:
interface any {};
          ^ Missing name in interface
